# StaticsMapping

./: CMakeLists.txt  README.md  vcpkg.json
Common/: CMakeLists.txt  Common.hpp  CryptoHash.cpp  CryptoHash.hpp  DataPath.cpp  DataPath.hpp  Diagnostics.cpp  Diagnostics.hpp  Json.cpp  Json.hpp  Settings.cpp  Settings.hpp
Common/Classification/: AfiliateModel.cpp  AfiliateModel.hpp  Afiliates.cpp  Afiliates.hpp  Aircraft.cpp  Aircraft.hpp  AircraftModel.cpp  AircraftModel.hpp  Airline.cpp  Airline.hpp  AirlineModel.cpp  AirlineModel.hpp  Airport.cpp  Airport.hpp  AirportDataQuery.cpp  AirportDataQuery.hpp  CMakeLists.txt  CategoryModelDisplay.cpp  CategoryModelDisplay.hpp  Classification.hpp  Constants.cpp  Constants.hpp  Definitions.cpp  Definitions.hpp  EngineModel.cpp  EngineModel.hpp  IcaoRecord.cpp  IcaoRecord.hpp  Library.cpp  Library.hpp  LibraryModel.cpp  LibraryModel.hpp  Model.cpp  Model.hpp  Models.cpp  Models.hpp  Object.cpp  Object.hpp  ObjectModel.cpp  ObjectModel.hpp  (+10 more)
Common/Data/: CMakeLists.txt  data.json  earth-frag.glsl  obj8-frag.glsl  obj8-lights.json  obj8-vert.glsl
Common/Obj8/: AbstractBlend.cpp  AbstractBlend.hpp  AbstractHard.cpp  AbstractHard.hpp  AbstractIndex.cpp  AbstractIndex.hpp  AbstractLayerGroup.cpp  AbstractLayerGroup.hpp  AbstractMaterial.cpp  AbstractMaterial.hpp  AbstractShader.cpp  AbstractShader.hpp  AbstractSmoke.cpp  AbstractSmoke.hpp  AbstractSpecular.cpp  AbstractSpecular.hpp  AbstractTexture.cpp  AbstractTexture.hpp  AbstractToggleVisibility.cpp  AbstractToggleVisibility.hpp  AbstractVertex.cpp  AbstractVertex.hpp  AbstractVisitor.cpp  AbstractVisitor.hpp  CMakeLists.txt  Comment.cpp  Comment.hpp  Conditional.cpp  Conditional.hpp  Empty.cpp  Empty.hpp  EncodingIndicator.cpp  EncodingIndicator.hpp  File.cpp  File.hpp  Header.cpp  Header.hpp  IgnoredLine.cpp  IgnoredLine.hpp  Magic.cpp  (+12 more)
Common/Obj8/Attribute/: Ignored.cpp  Ignored.hpp
Common/Obj8/Command/Action/: SmokeBlack.cpp  SmokeBlack.hpp  SmokeWhite.cpp  SmokeWhite.hpp
Common/Obj8/Command/Animation/: Hide.cpp  Hide.hpp  KeyframeLoop.cpp  KeyframeLoop.hpp  Rotation.cpp  Rotation.hpp  RotationBegin.cpp  RotationBegin.hpp  RotationKey.cpp  RotationKey.hpp  Show.cpp  Show.hpp  Translation.cpp  Translation.hpp  TranslationBegin.cpp  TranslationBegin.hpp  TranslationKey.cpp  TranslationKey.hpp
Common/Obj8/Command/Geometry/: LightCustom.cpp  LightCustom.hpp  LightNamed.cpp  LightNamed.hpp  LightParam.cpp  LightParam.hpp  LightSpillCustom.cpp  LightSpillCustom.hpp  Lights.cpp  Lights.hpp  Lines.cpp  Lines.hpp  Triangles.cpp  Triangles.hpp
Common/Obj8/Command/State/: Ambient.cpp  Ambient.hpp  CockpitRegion.cpp  CockpitRegion.hpp  Draped.cpp  Draped.hpp  Emission.cpp  Emission.hpp  Hard.cpp  Hard.hpp  HardDeck.cpp  HardDeck.hpp  LightLevel.cpp  LightLevel.hpp  Lod.cpp  Lod.hpp  NoBlend.cpp  NoBlend.hpp  NoDraped.cpp  NoDraped.hpp  NoShadow.cpp  NoShadow.hpp  PolygonOffset.cpp  PolygonOffset.hpp  Shadow.cpp  Shadow.hpp  ShadowBlend.cpp  ShadowBlend.hpp  ShinyRat.cpp  ShinyRat.hpp  Specular.cpp  Specular.hpp
Common/Obj8/Data/: Index.cpp  Index.hpp  Index10.cpp  Index10.hpp  LightVertex.cpp  LightVertex.hpp  LineVertex.cpp  LineVertex.hpp  Vertex.cpp  Vertex.hpp
Common/Obj8/Global/: CockpitRegion.cpp  CockpitRegion.hpp  LayerGroup.cpp  LayerGroup.hpp  LayerGroupDraped.cpp  LayerGroupDraped.hpp  LodDraped.cpp  LodDraped.hpp  NoBlend.cpp  NoBlend.hpp  NoShadow.cpp  NoShadow.hpp  PointsCounts.cpp  PointsCounts.hpp  ShadowBlend.cpp  ShadowBlend.hpp  SlopeLimit.cpp  SlopeLimit.hpp  SlungLoadWeight.cpp  SlungLoadWeight.hpp  Specular.cpp  Specular.hpp  Texture.cpp  Texture.hpp  TextureDraped.cpp  TextureDraped.hpp  TextureLit.cpp  TextureLit.hpp  TextureNormal.cpp  TextureNormal.hpp  Tint.cpp  Tint.hpp
Common/Obj8/Global/Shader/: BumpLevel.cpp  BumpLevel.hpp  NoBlend.cpp  NoBlend.hpp  NoShadow.cpp  NoShadow.hpp  Specular.cpp  Specular.hpp  TwoSided.cpp  TwoSided.hpp
Common/Obj8/Parameter/: Integer.cpp  Integer.hpp  Number.cpp  Number.hpp  Ratio.cpp  Ratio.hpp  Word.cpp  Word.hpp
Common/Obj8/Parser/: LexerContext.cpp  LexerContext.hpp  Number.cpp  Number.hpp  Parser.hpp  SyntaxError.cpp  SyntaxError.hpp  Word.cpp  Word.hpp
Common/QImagePlugins/DDS/: CMakeLists.txt
Common/Widgets/: AircraftDelegate.cpp  AircraftDelegate.hpp  AircraftScreen.cpp  AircraftScreen.hpp  AircraftTableDialog.cpp  AircraftTableDialog.hpp  AirlineDelegate.cpp  AirlineDelegate.hpp  AirlineGraphWidget.cpp  AirlineGraphWidget.hpp  AirlineMap.cpp  AirlinePicker.cpp  AirlinePicker.hpp  AirlineScreen.cpp  AirlineScreen.hpp  AirlineTableDialog.cpp  AirlineTableDialog.hpp  AirportDataQueryDialog.cpp  AirportDataQueryDialog.hpp  Application.cpp  Application.hpp  CMakeLists.txt  EditAircraftDialog.cpp  EditAircraftDialog.hpp  EditAirlineDialog.cpp  EditAirlineDialog.hpp  EnumPicker.cpp  EnumPicker.hpp  FilenameLineEdit.cpp  FilenameLineEdit.hpp  GlobalDistributionDialog.cpp  GlobalDistributionDialog.hpp  GlobalDistributionWidget.cpp  GlobalDistributionWidget.hpp  GraphBackend.cpp  GraphBackend.hpp  GraphWidget.cpp  GraphWidget.hpp  Graphviz.cpp  Graphviz.hpp  (+26 more)
Common/Widgets/OpenGL/: API.cpp  API.hpp  BufferObject.cpp  BufferObject.hpp  Camera.cpp  Camera.hpp  Context.cpp  Context.hpp  DrawElements.cpp  DrawElements.hpp  DrawElementsObj8.cpp  DrawElementsObj8.hpp  FrameBufferObject.cpp  FrameBufferObject.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Obj8Lod.cpp  Obj8Lod.hpp  Obj8NamedLightFactory.cpp  Obj8NamedLightFactory.hpp  Obj8Scene.cpp  Obj8Scene.hpp  Obj8Shader.cpp  Obj8Shader.hpp  Obj8Visitor.cpp  Obj8Visitor.hpp  Object.cpp  Object.hpp  RawImage.cpp  RawImage.hpp  Scene.cpp  Scene.hpp  Screen.cpp  Screen.hpp  Shader.cpp  Shader.hpp  (+4 more)
Common/Widgets/OpenGL/Camera/: Camera.cpp  Camera.hpp  OnScreenDisplay.cpp  (+7 more)
Test/: Afiliates.cpp  Afiliates.hpp  CMakeLists.txt  Definitions.cpp  Definitions.hpp  DefinitionsHelper.cpp  DefinitionsHelper.hpp  Mnemonics.cpp  Mnemonics.hpp  Models.cpp  Models.hpp  Parser.cpp  Parser.hpp  ParserHelper.hpp  XPClass.cpp  XPClass.hpp  coverage.sh
(+38 files in other folders)
